working on logging tool

--- a/!OSLibGame/Makefile
+++ b/!OSLibGame/Makefile
@@ -3,7 +3,8 @@ CFLAGS = -mlibscl -IOSLib: -std=c99 -Wall -Wextra -pedantic
 LD = gcc
 LDFLAGS = -mlibscl 
 LIBS = -LOSLib: -lOSLib32
-OBJS = main.o
+OBJS = main.o logger.o
+RM = delete                 
 
 application: $(OBJS)
 	$(LD) $(LDFLAGS) -o $@ $^ $(LIBS)
@@ -11,6 +12,10 @@ application: $(OBJS)
 %.o: %.c
 	$(CC) $(CFLAGS) -c -o $@ $<
 
-clean:
-	$(RM) $(OBJS)
+clean:           
+	$(RM) o.logger
+	$(RM) o.main
 	$(RM) application
+
+#	$(RM) $(OBJS)
+#	$(RM) application
